<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:key="pref_color"
        android:title="@string/pref_appearance">

        <!--<ListPreference
            android:defaultValue="@string/pref_bc_def"
            android:key="pref_bc_key"
            android:entries="@array/pref_bc_entries"
            android:entryValues="@array/pref_bc_values"
            android:title="@string/pref_bc_text" />-->

        <ListPreference
            android:defaultValue="@string/pref_theme_def"
            android:key="pref_theme_key"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:title="@string/pref_theme_text" />

        <PreferenceScreen
            android:key="pref_bc_pic_key"
            android:title="@string/pref_bc_pic_text"
            android:summary="@string/pref_bc_pic_description">
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>